lang/lc/tests/err_redef_type.sys
type color = enum { R, G, B };
type color = enum { R, G, B };
type color = enum { R, G, B };
type boo = color;
type boo = color;
type test = enum { A, A };
